--- a/templates/main.cf.erb
+++ b/templates/main.cf.erb
@@ -824,6 +824,12 @@ mailbox_size_limit = <%= @mailbox_size_limit %>
 message_size_limit = <%= @message_size_limit %>
 
 <% end -%>
+<% if @mailbox_size_limit -%>
+# Mailbox size limit
+mailbox_size_limit = <%= @mailbox_size_limit %>
+
+<% end -%>
+
 # Make nobody redirect to /dev/null work
 allow_mail_to_files = alias
 
