debugging string literal issue with puppet8 client and puppet7 server

--- a/templates/main.cf.erb
+++ b/templates/main.cf.erb
@@ -106,7 +106,7 @@ mydomain = <%= @mydomain %>
 #
 #myorigin = $myhostname
 #myorigin = $mydomain
-myorigin = <%= @myorigin %>
+myorigin = '<%= @myorigin %>'
 
 # RECEIVING MAIL
 
