--- a/templates/main.cf.erb
+++ b/templates/main.cf.erb
@@ -106,7 +106,7 @@ mydomain = <%= @mydomain %>
 #
 #myorigin = $myhostname
 #myorigin = $mydomain
-myorigin = <%= @postfix::server::myorigin %>
+myorigin = <%= @myorigin %>
 
 # RECEIVING MAIL
 
